fix: overflow hidden on tablet

--- a/src/scss/ui/content/_places.scss
+++ b/src/scss/ui/content/_places.scss
@@ -2,14 +2,17 @@
 @use 'base/mixins';
 
 .places {
-    
+
     &__grid {
 
         display: grid;
         grid-template-columns: repeat(4, 30rem);
         column-gap: 4rem;
+        
         @include mixins.scrollHorizontal;
-        @include mixins.tablet { 
+
+        @include mixins.tablet {
+            overflow-x: hidden;
             @include mixins.grid(2, 2rem);
         }
         @include mixins.desktop { 
